implement sorting the `supportedGameVersionIds` arrays
